--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  margin: 0;
+  padding: 0;
 }
 
 textarea {
@@ -68,4 +70,34 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+table {
+  align-items: stretch;
+  width: 100%;
+}
+
+tr {
+  height: 80px;
+}
+
+.col-1 {
+ width: 20px;
+ border-top: 2px dashed #d3d3d3;
+}
+
+.col-2 {
+  width: 300px;
+  border: 1px solid #d3d3d3;
+}
+
+.col-3 {
+  width: 20px;
+  border: 1px solid #d3d3d3;
 }
